--- a/views/studentData.ejs
+++ b/views/studentData.ejs
@@ -15,7 +15,9 @@
         <button>Home</button>
     </form>
     <form id="chooseName" method="POST" action="/studentData">
+        <input type="text" name="studentID" id="studentID" placeholder="Student ID">
         <input type="text" name="name" id="name" placeholder="Student Name">
+        <input type="text" name="email" id="email" placeholder="Student Email">
         <button>Request</button>
     </form>
     <label>
@@ -38,7 +40,7 @@
 
                 <% } %>
     </label>
-    <h3>Swap Device</h3>
+    <h3>Assign/Swap Device</h3>
     <label>Current Device: <%= student.computerNumber %></label>
 
     <body>
