Mass disabling of code pending investigation of reason why; Deletion of unused, and rewrites of functions

--- a/views/userHomepage.ejs
+++ b/views/userHomepage.ejs
@@ -7,3 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Homepage</title>
 </head>
+
+<body>
+    <label>Current Device: <%= user.email %></label>
+</body>
