More notes, code cleanup, and functionality streamlining

--- a/views/userHomepage.ejs
+++ b/views/userHomepage.ejs
@@ -9,5 +9,9 @@
 </head>
 
 <body>
-    <label>Current Device: <%= user.email %></label>
+
+    <label>Current User: <%= user.username %></label>
+    <label>Current Email: <%= user.email %></label>
+
+    
 </body>
