winston code updates, changes made to google pull to attempt to fix bug found during test deployment

--- a/views/userHomepage.ejs
+++ b/views/userHomepage.ejs
@@ -13,5 +13,12 @@
     <label>Current User: <%= user.username %></label>
     <label>Current Email: <%= user.email %></label>
 
-    
+    <div>
+        <form method="POST" action="/logout">
+            <div>
+                <button class="btn">Logout</button>
+            </div>
+        </form>
+    </div>
+
 </body>
